# ruice

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: conventional-commits.yml  rust.yml
axum/: Cargo.toml
axum/src/: lib.rs
core/: Cargo.toml
core/src/: bind.rs  construct.rs  inject.rs  lib.rs  singleton.rs  tagged.rs
