[package]
name = "ruice-axum"
description = "Injects services in a ruice container into axum controllers."
version = "0.2.0"
edition = "2021"
rust-version = "1.67.1"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/yumemi-inc/ruice.git"
authors = [
    "Naoki Ikeguchi <n_ikeguchi@yumemi.co.jp>",
]

[dependencies]
ruice = { path = "../core", version = "=0.2.0" }

async-trait = "0.1.83"
axum = "0.7.7"
thiserror = "1.0"
