[package]
name = "ruice"
description = "Runtime based dependency injection for Rust."
version = "0.1.2"
edition = "2021"
rust-version = "1.67.1"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/yumemi-inc/ruice.git"
authors = [
    "Naoki Ikeguchi <n_ikeguchi@yumemi.co.jp>",
]

[dependencies]
async-trait = "0.1.73"

[dev-dependencies]
tokio = { version = "1.32", features = ["macros", "rt"] }
